# grove-pi-enviroment-checker

./: CMakeLists.txt  client.c  client2.c  schritt1.c  server.c  server2.c  server_done.c  server_fork.c
AAA Pi Gui/: gui.c
AAA Pi praktikum/: client.c  schritt1.c  server.c  server_fork.c
PIR-motion sensor/: pir_motion_sensor.c
System Volume Information/: IndexerVolumeGuid
Temperatur und Luftfeuchtigkeit/: temp_hum.c
abgabe/: server_abgabe.c  server_abgabe2.c  server_test.c
grovepi/: grovepi.c
